# poc-rust-web-framework

./: Cargo.toml
src/: application.rs  handler.rs  lib.rs  request.rs  response.rs  route.rs  router.rs
