[package]
name = "poc-lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# axum = "0.3.1"
# tower-service = "0.3"
async-trait = "0.1.51"
matchit = "0.4.4"
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }